<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_alignParentRight="true"
        android:src="@drawable/bg_icon"
        android:layout_width="156dp"
        android:layout_height="159dp" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_marginLeft="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/hello_morning"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_marginLeft="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_1"
        android:layout_marginTop="11dp"
        android:text="@string/function_string1"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/ll_normal"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_2"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cunzhao"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:padding="17dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/cunzhao_icon"
            android:background="@drawable/selector_function_tv_bg"
            android:gravity="center"
            android:text="@string/function_string2"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_zhengzhao"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:padding="17dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/zhengzhao_icon"
            android:background="@drawable/selector_function_tv_bg"
            android:gravity="center"
            android:text="@string/function_string3"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_classify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_normal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/shape_function_tv_bg"
        android:orientation="vertical"
       >

        <LinearLayout
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_xueli"
                android:drawableTop="@drawable/xueli_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/function_string_xueli"
                android:textColor="@color/color_808080"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_lvyou"
                android:drawableTop="@drawable/lvyou_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/function_string_lvyou"
                android:textColor="@color/color_808080"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_jianzhu"
                android:drawableTop="@drawable/jianzhu_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/function_string_jianzhu"
                android:textColor="@color/color_808080"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_yiyao"
                android:drawableTop="@drawable/yiyao_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/function_string_yiyao"
                android:textColor="@color/color_808080"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_yuyan"
                android:drawableTop="@drawable/yuyan_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/function_string_yuyan"
                android:textColor="@color/color_808080"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_shenfen"
                android:drawableTop="@drawable/shengfen_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/function_string_shenfen"
                android:textColor="@color/color_808080"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_it"
                android:drawableTop="@drawable/it_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/function_string_it"
                android:textColor="@color/color_808080"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_all"
                android:drawableTop="@drawable/changjing_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/function_string_all"
                android:textColor="@color/color_808080"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_4"
        android:drawablePadding="6dp"
        android:drawableLeft="@drawable/remen_icon"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_classify"
        android:layout_marginTop="24dp"
        android:text="@string/function_string4"
        android:textColor="@color/color_000000"
        android:textSize="16sp" />
</RelativeLayout>