<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.qihe.zzj.ui.activity.LoginActivity">

        <ImageView
            android:background="?android:attr/actionBarItemBackground"
            android:id="@+id/iv_back"
            android:layout_marginTop="30dp"
            android:src="@drawable/back_icon"
            android:padding="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_bg"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="127dp"
            android:src="@drawable/bg_icon_denglu" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_bg"
            android:layout_marginLeft="37dp"

            android:text="@string/login_string2"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_1"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="5dp"
            android:text="@string/login_string1"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_2"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="37dp"
            android:background="@null"
            android:hint="@string/enter_phonenum"
            android:inputType="number"
            android:maxLength="11"
            android:textColorHint="@color/color_C5C5C5" />

        <EditText
            android:id="@+id/edit_password"
            android:drawableRight="@drawable/buxianshi_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_phone"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/save_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColorHint="@color/color_C5C5C5" />


        <EditText
            android:id="@+id/edit_invitecode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/invitecode_password"
            android:maxLength="12"
            android:textColorHint="@color/color_C5C5C5" />



        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_invitecode"
            android:layout_margin="37dp"
            android:background="@drawable/selector_login_tv_bg"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</layout>
