<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:binding="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_feture_shape"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/canel_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:padding="18dp"
                android:src="@drawable/cha" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/function_string_all"
                android:textColor="#000"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/sure_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="18dp"
                android:src="@drawable/gou" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiangsu_size"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@drawable/input_shape">

                <EditText
                    android:id="@+id/with_ed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/kuang"
                    android:inputType="number"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_666666"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:text="x"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_12" />

            <LinearLayout
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/input_shape">

                <EditText
                    android:id="@+id/height_ed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/gao"
                    android:inputType="number"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_666666"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="PX"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wenjian_size"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@drawable/input_shape">

                <EditText
                    android:id="@+id/min_ed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="20"
                    android:inputType="number"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_666666"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:text="~"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_12" />

            <LinearLayout
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/input_shape">

                <EditText
                    android:id="@+id/max_ed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="100"
                    android:inputType="number"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_666666"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="KB"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fenbianlv"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="率"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@drawable/input_shape">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="300"
                    android:inputType="number"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_666666"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="DPI"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

    </LinearLayout>

</layout>